data/derived/comb/progs/unify/prog5349.ml.out
Characters 69-81:
  let prod = mulByDigit x + o in
             ^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
